WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49810
Fix EWebLauncher zoom discretization
https://bugs.webkit.org/show_bug.cgi?id=49810
Summary
Fix EWebLauncher zoom discretization
João Paulo Rechi Vita
Reported
2010-11-19 08:59:37 PST
Fix EWebLauncher zoom discretization
Attachments
Patch
(3.44 KB, patch)
2010-11-19 09:03 PST
,
João Paulo Rechi Vita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
João Paulo Rechi Vita
Comment 1
2010-11-19 09:03:01 PST
Created
attachment 74396
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2010-11-22 00:20:47 PST
Comment on
attachment 74396
[details]
Patch Maybe you should adopt WebKit coding style for everything in WebKit?
WebKit Commit Bot
Comment 3
2010-11-22 01:27:44 PST
Comment on
attachment 74396
[details]
Patch Clearing flags on attachment: 74396 Committed
r72506
: <
http://trac.webkit.org/changeset/72506
>
WebKit Commit Bot
Comment 4
2010-11-22 01:27:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug