2010-11-22  João Paulo Rechi Vita  <jprvita@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        Fix EWebLauncher zoom discretization
        https://bugs.webkit.org/show_bug.cgi?id=49810

        * EWebLauncher/main.c:
        (nearest_zoom_level_get):
        (zoom_level_set):
        (on_load_finished):
        (on_key_down):

Canonical link: https://commits.webkit.org/62968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72506 268f45cc-cd09-0410-ab3c-d52691b4dbfc